2007-05-09  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/gphoto2-port.h, gphoto2/gphoto2-port-library.h,
	  libgphoto2_port/gphoto2-port.c, libgphoto2_port/libgphoto2_port.sym,
	  usb/libusb.c:

	  Added USB class based control read and write (for PTP driver).

2007-02-12  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip/ptpip.c: mDNS auto discovery disabled,
	  since the mDNS compat module of avahi crashes autodetect
	  if used incorrectly.

2007-01-20  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: Use usb_interrupt_read instead
	  of usb_bulk_read.

2006-09-09  Marcus Meissner  <marcus@jet.franken.de>

	* disk: Merged Solaris mount entry handling from
	  SF tracker
http://sourceforge.net/tracker/download.php?group_id=8874&atid=108874&file_id=171553&aid=1427300

          (but pretty modified).

2006-02-19  Marcus Meissner  <marcus@jet.franken.de>

	* Regular expression support added for:

	  usb:		(currently supported: usb:XXX,YYY,
			 can get easily more)

	  disk:		(disk:/full/path/)
	  ptpip:	(ptpip:ipnr:port)

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2_port/gphoto2-port-info-list.c: Fixed
	  various problems in regular expression based ports
	  handling.

2006-02-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptpip/: New directory for PTP/IP support.
	* configure.in: added ptpip directory
	  autodetect mDNSresponder (UNIX version of Bonjour)

2006-01-04  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: buumped .so version. Bumped 
	  package version.

2005-08-17  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: Recurse into the interfaces to see
	  HID devices and similar so we can skip them.

	  This avoids unnecessary listing of some
	  non camera devices and usb:XXX,YYY confusion.

2005-08-14  Marcus Meissner  <marcus@jet.franken.de>

	* configure.in: Use "disk" unconditional. 
	  When we detect HAL , define HAVE_HAL.

	* disk/disk.c: Read /etc/fstab and /etc/mtab and look