@@ -1,3 +1,9 @@
+2007-06-09  Marcus Meissner  <marcus@jet.franken.de>
+
+	* usb/libusb.c: Reset the USB port before close.
+
+	  This will help the notorious "Canon hang on init" problem.
+
 2007-05-09  Marcus Meissner  <marcus@jet.franken.de>
 
 	* gphoto2/gphoto2-port.h, gphoto2/gphoto2-port-library.h,
